# collectionscraper

./: Cargo.toml  README.md
.github/workflows/: rust.yml
scripts/: down.py  up.py
src/: api.rs  db.rs  main.rs  rabbit.rs  utils.rs
